# PetzoldPW5e-rs

./: .gitignore  README.md
Chapter 01 - Getting Started/hello_msg/: Cargo.toml
Chapter 01/hello_msg/: Cargo.toml
Chapter 02 - An Introduction to Unicode/scrn_size/: Cargo.toml
Chapter 03 - Windows and Messages/hello_bin/: Cargo.toml
Chapter 04 - An Exercise in Text Output/sys_mets1/: Cargo.toml
Chapter 04 - An Exercise in Text Output/sys_mets2/: Cargo.toml
Chapter 04 - An Exercise in Text Output/sys_mets3/: Cargo.toml
Chapter 04 - An Exercise in Text Output/sys_mets_data/: Cargo.toml
Chapter 04/sys_mets/: Cargo.toml
Chapter 04/sys_mets1/: Cargo.toml
Chapter 04/sys_mets2/: Cargo.toml
Chapter 04/sys_mets3/: Cargo.toml
Chapter 05 - Basic Drawing/alt_wind/: Cargo.toml
Chapter 05 - Basic Drawing/bezier/: Cargo.toml
Chapter 05 - Basic Drawing/clover/: Cargo.toml
Chapter 05 - Basic Drawing/dev_caps1/: Cargo.toml
Chapter 05 - Basic Drawing/line_demo/: Cargo.toml
Chapter 05 - Basic Drawing/rand_rect/: Cargo.toml
Chapter 05 - Basic Drawing/sine_wave/: Cargo.toml
Chapter 05 - Basic Drawing/what_size/: Cargo.toml
Chapter 05/alt_wind/: Cargo.toml
Chapter 05/bezier/: Cargo.toml
Chapter 05/clover/: Cargo.toml
Chapter 05/dev_caps1/: Cargo.toml
Chapter 05/line_demo/: Cargo.toml
Chapter 05/rand_rect/: Cargo.toml
Chapter 06 - The Keyboard/sys_mets4/: Cargo.toml
Chapter 06 - The Keyboard/sys_mets4/src/: main.rs
Chapter 07 - The Mouse/sys_mets/: Cargo.toml
Chapter 07 - The Mouse/sys_mets/src/: main.rs
extras/: Cargo.toml
(+74 files in other folders)
